<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快递100</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 欢迎界面文字 -->
    <string name="welcome_text">欢迎界面图片</string>
    <!-- 导航页圆点描述 -->
    <string name="point_btn_str">圆点</string>

    <!-- 主界面底部导航文字 -->
    <string name="main_nav_home">首页</string>
    <string name="main_nav_search">查快递</string>
    <string name="main_nav_jkd">寄快递</string>

    <!-- 首页title -->
    <string name="home_title">快递100</string>
    <!-- 首页tab文字 -->
    <string name="home_all_text">全部</string>
    <string name="home_not_get_in_text">未签收</string>
    <string name="home_get_in_text">已签收</string>
    <string name="home_receive_text">回收站</string>
    
    <!-- 自定义listview 下拉刷新、上拉加载文字 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="lastUpdateTime">2016-9-18 00:00:20</string>
    
    

    <string name="menu_settings">Settings</string>
    <string name="no_nfc">该设备不支持NFC</string>
    <string name="open_nfc">NFC功能没打开，请打开</string>
    <string name="write_tag">写入标签</string>
    <string name="read_tag">读出标签</string>
    <string name="edit_hint">请输入您要写入标签的内容</string>

</resources>