<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"  >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"  >

        <!-- 头部 -->

        <RelativeLayout
            android:id="@+id/top_tab"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:background="#1E90FF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:clipToPadding="false"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:text="@string/home_title"
                android:textColor="#ffffff"
                android:textSize="18dip" />
        </RelativeLayout>

        <!-- 底部 -->

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/home_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/home_img"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/home" />

                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_nav_home"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wechat_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/wechat_img"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wechat" />

                <TextView
                    android:id="@+id/wechat_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wechat_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_nav_search"
                    android:textColor="#000000" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phone_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/phone_img"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_nav_jkd"
                    android:textColor="#000000" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_above="@id/ll_bottom"
            android:background="#EAEAEA" />

        <!-- fragment内容 -->

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/line"
            android:layout_below="@id/top_tab"
            android:orientation="vertical" >
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>